...

  @override
  Widget build(BuildContext context) {
    final l10n = AppLocalizations.of(context);

    return AlertDialog(
      key: const Key('delete-salon-dialog'),
      title: Text(l10n.deleteSalonTitle),
      content: Text(
        isLastSalon ? l10n.deleteSalonBodyLastSalon : l10n.deleteSalonBody,
      ),
      actions: <Widget>[
        TextButton(
          key: const Key('btn-cancel-delete-salon'),
          onPressed: () => ModalRoute.of(context)?.navigator?.pop(false),
          child: Text(l10n.actionCancel),
        ),
        FilledButton(
          key: const Key('btn-confirm-delete-salon'),
          style: ButtonStyle(
            backgroundColor: WidgetStatePropertyAll(
              Theme.of(context).colorScheme.error,
            ),
          ),
          onPressed: () => ModalRoute.of(context)?.navigator?.pop(true),
...
